# engineering-tools

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADR-0029_CHANGE_PLAN.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMMIT_MSG.txt  DAT_CODE_REVIEW.md  DEBUGGING_CHECKLIST.md  FIXES_APPLIED.md  FRONTEND_STYLING_FIXES.md  Makefile  PPTX_CONFIG_FIXES.md  Procfile  README.md  ROUTING_FIXES.md  SETUP.md  TOOL_ALIGNMENT.md  VITE_PROXY_FIXES.md  commit_message.txt  debug_graph.py  docker-compose.yml  drift-analysis.json  final-drift-report.json  mkdocs.yml  pyproject.toml  reference-drift-report.json  requirements-docs.txt  semantic-audit-report.json  setup.ps1  setup.sh  start.ps1  start.sh  temp_openapi.json  test_dat_backend.py  test_endpoints_standalone.py  validation-report.json
.adrs/: ADR-0001_Hybrid-FSM-Stage-Orchestration.json  ADR-0002_Artifact-Preservation-on-Unlock.json  ADR-0003_Optional-Context-Preview-Stages.json  ADR-0004_Deterministic-Stage-IDs.json  ADR-0005_Swagger-Driven-E2E-Validation.json  ADR-0006_Table-Availability.json  ADR-0008_Audit-Trail-Timestamps.json  ADR-0009_Type-Safety-Contract-Discipline.json  ADR-0010_Docs-as-Code-Engineering-Tenets.json  ADR-0011_Profile-Driven-Extraction-and-Adapters.json  ADR-0012_Windows-First-Concurrency.json  ADR-0013_Cancellation-Semantics-Parse-Export.json  ADR-0014_Parse-and-Export-Artifact-Formats.json  ADR-0015_3-Tier-Document-Model.json  ADR-0016_Hybrid-Semver-Contract-Versioning.json  ADR-0017_Cross-Cutting-Guardrails.json  ADR-0041_AI-Development-Workflow.json  ADR_INDEX.md  AGENTS.md  TODO_CODE_VALIDATION.md
.discussions/: AGENTS.md  DISC-001_DevTools-AI-Workflow-Integration.md  DISC-002_AI-Lite-Prompt-Chain-Workflow.md  DISC-003_Langchain-Langgraph-Integration.md  DISC-004_PII-Sanitization-Pipeline.md  DISC-005_Embedding-Model-Selection.md  DISC-006_Knowledge-Archive-RAG-System.md  DISC-006_xAI_Prompts.md  DISC-007_Unified-xAI-Agent-Wrapper.md  DISC-008_Open-Questions-Workflow-UX.md  DISC-009_Orphan-ADRs-Policy-Document-Strategy.md  DISC-010_Centralized-UI-UX-Design-System.md  DISC-DEPENDENCY-GRAPH.md  INDEX.md  README.md  Test-Discussion.md
.plans/: AGENTS.md  INDEX.md  PLAN-001_DevTools-Workflow-Manager.json  PLAN-002_Knowledge-Archive-Implementation.md  README.md
.questions/: CONTRACT_Profile-Schema-SSOT_Migration.md  DAT_INVESTIGATION_REPORT_2025-12-29.md  DESIGN_Profile-Driven-ETL-Architecture.md  IMPL_Profile-Executor-Implementation-Plan.md  PLAN-001_M1_Baseline-Tests-Failing.md
.sessions/: SESSION_001_PROFILE_ETL_VALIDATION.md  (+27 more)
(+836 files in other folders)
